openshift-virtualization/route.yaml
---
# Route to expose the web server externally
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bootc-webserver
  namespace: bootable-containers-demo
  labels:
    app: bootc-webserver
spec:
  to:
    kind: Service
    name: bootc-webserver
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
